--- a/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
+++ b/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
@@ -15,6 +15,9 @@
     "## Don't Have Any Experiments?\n",
     "Try running our example of [Tuning a Text Classifier](blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) (there is also a [notebook walkthrough](https://github.com/sigopt/sigopt-examples/blob/master/text-classifier/SigOpt%20Text%20Classifier%20Walkthrough.ipynb) version) and using that experiment id for this tutorial. Do the graphs match up with your intuition about how each parameter value should theoretically affect training time?\n",
     "\n",
+    "## TL/DR\n",
+    "Skip to the appendix at the bottom to see some graphs of parameter value versus training time for combined three iterations of [Tuning a Text Classifier](blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text).\n",
+    "\n",
     "## Setup\n",
     "Run the following commands to clone this repo, install dependencies, and get this notebook up and running. After running these commands a browser window should pop up, and from there you can navigate to this notebook ([this link](http://localhost:8888/notebooks/Estimated%20Training%20Time%20vs%20Parameter%20Values.ipynb) should also take you directly to the notebook one jupyter is running).\n",
     "```\n",
@@ -189,6 +192,26 @@
    "source": [
     "## Next Steps\n",
     "Did you notice anything interesting with your experiments? Do the graphs match up to your intuition about how parameter values affect training time? Email <contact@sigopt.com> or tweet to [@SigOpt](twitter.com/sigopt) to let us know what you find! Happy Optimizing!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix: What we noticed\n",
+    "We ran this notebook on three experiments from our text classifier example, and produced the graphs below. It's interesting to note how by visual inspection, it appears that the two parameters with the most influence on time are `min_n_gram` and `n_gram_offset`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Estimated training time versus log regularization coefficient](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-log-reg-coefficient.png?raw=true)\n",
+    "![Estimated training time versus l1 coefficient](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-l1-coefficient.png?raw=true)\n",
+    "![Estimated training time versus log minimum document frequency](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-log-min-df.png?raw=true)\n",
+    "![Estimated training time versus document frequency offset](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-df-offset.png?raw=true)\n",
+    "![Estimated training time versus min n-gram](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-min-n-gram.png?raw=true)\n",
+    "![Estimated training time versus n-gram offset](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-n-gram-offset.png?raw=true)"
    ]
   }
  ],
