--- a/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
+++ b/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
@@ -182,7 +182,7 @@
     "for (param, values) in parameter_values.iteritems():\n",
     "    iplot({\n",
     "            'data': [Scatter(x=values, y=estimated_training_times, mode=\"markers\")],\n",
-    "            'layout': {'title': 'Estimated Training Time vs {}'.format(param)}\n",
+    "            'layout': {'title': 'Estimated Training Time (s) vs {}'.format(param)}\n",
     "    })"
    ]
   },
