--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore SigOpt: Tutorial on Estimated Training Time Data\n",
+    "# SigOpt Explorations: How are My Hyperparameters Affecting My Training Time?\n",
     "_By [Alexandra Johnson](https://sigopt.com/about#alexandra), Software Engineer_\n",
     "\n",
     "SigOpt helps you optimize your hyperparameters, but did you know that SigOpt can also help you explore how long it takes to train your models? This jupyter notebook tutorial will show you how to take advantage of information already present in the [SigOpt API](https://sigopt.com/docs/overview) to learn new and interesting insights about how parameter values affect model training time.\n",
@@ -19,7 +19,7 @@
     "Skip to the appendix at the bottom to see some graphs of parameter value versus training time for combined three iterations of [Tuning a Text Classifier](blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text).\n",
     "\n",
     "## Setup\n",
-    "Run the following commands to clone this repo, install dependencies, and get this notebook up and running. After running these commands a browser window should pop up, and from there you can navigate to this notebook ([this link](http://localhost:8888/notebooks/Estimated%20Training%20Time%20vs%20Parameter%20Values.ipynb) should also take you directly to the notebook one jupyter is running).\n",
+    "Run the following commands to clone this repo, install dependencies, and get this notebook up and running. After running these commands a browser window should pop up, and from there you can navigate to this notebook ([this link](http://localhost:8888/notebooks/How%20are%20My%20Hyperparameters%20Affecting%20My%20Training%20Time%3F.ipynb) should also take you directly to the notebook one jupyter is running).\n",
     "```\n",
     "git clone https://github.com/sigopt/sigopt-examples.git\n",
     "cd sigopt-examples/estimated-training-time/\n",
