help people find experiments

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grab the ids of some interesting experiments that you'd like to look at training time for! You can find an experiment's id by clicking on the properties tab of any experiment page. You can examine multiple experiments at once as long as they all have the same parameters. "
+    "Grab the ids of some interesting experiments that you'd like to look at training time for! You can find an experiment's id by clicking on the properties tab of any experiment page. You can examine multiple experiments at once as long as they all have the same parameters. Find your experiments on your [experiment dashboard](https://sigopt.com/experiment/list)."
    ]
   },
   {
