typos and clarification

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grab the ids of some interesting experiments that you'd like to look at training time for! You can find an experiment's id by clicking on the properties tab of any experiment page. You can examine multiple experiments at once as long as they all have the same parameters. Find your experiments on your [experiment dashboard](https://sigopt.com/experiment/list)."
+    "Grab the ids of some interesting experiments that you'd like to look at training time for! You can find an experiment's id by clicking on the properties tab of any experiment page. This notebook can look at **ids of multiple experiments**, but they will all be **combined into one training time graph**, so pick multiple experiments only if they represent the same model. Find your experiments on your [experiment dashboard](https://sigopt.com/experiment/list)."
    ]
   },
   {
@@ -55,8 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "# Sentiment LR Classifiers\n",
-    "experiment_ids = [2287, 2317, 2323]\n",
+    "# Pick your experiment ids! Use multiple ids if you used multiple experiments to train the same model\n",
+    "# experiment_ids = [] \n",
     "experiments = [conn.experiments(id).fetch() for id in experiment_ids]"
    ]
   },
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "# Want to ensure we're looking at experiments that use the same parameter\n",
+    "# Want to ensure we're looking at experiments that use the same parameters\n",
     "def equal(x, y):\n",
     "    assert x == y\n",
     "    return x\n",
@@ -210,14 +210,16 @@
    "outputs": [],
    "source": [
     "# Example evaluation loop using metadata to store total training time\n",
+    "# Make sure you've instantiated conn from earlier in the notebook\n",
     "from time import time\n",
     "# experiment_id = USER DEFINED\n",
     "\n",
     "for _ in range(60):\n",
     "    suggestion = conn.experiments(experiment_id).suggestions().create()\n",
     "    start_ts = time()\n",
-    "    value = evaluate_metric(suggestion.assignments)\n",
+    "    value = evaluate_metric(suggestion.assignments) # You implement this\n",
     "    end_ts = time()\n",
+    "    # Report an observation with training_time metadata\n",
     "    observation = conn.experiments(experiment_id).observations().create(\n",
     "        suggestion=suggestion.id,\n",
     "        value=value,\n",
