Plot a histogram of training times

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -228,6 +228,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Plot a histogram of the distribution of training times\n",
+    "from plotly.graph_objs import Histogram\n",
+    "\n",
+    "training_times = []\n",
+    "for observation in conn.experiments(experiment_id).observations().fetch(limit=60).data:\n",
+    "    training_times.append(observation.metadata['training_time'])\n",
+    "\n",
+    "iplot({\n",
+    "    'data': [Histogram(x=training_time_map.values())],\n",
+    "    'layout': {'title': 'Distribution of Training Times'}\n",
+    "})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
