After setting up, you can 'run all' and see interesting output

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -42,7 +42,29 @@
    "metadata": {},
    "source": [
     "# Tutorial\n",
-    "The first step is to either provide an experiment id, or to create an interesting experiment."
+    "The first step is to either provide an experiment id, or to create an interesting experiment. Here, we're creating an experiment and an evaluation function for you. If you'd like to time your own models, fill these in yourself!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "experiment = conn.experiments().create(\n",
+    "    name=\"Timing Test Experiment\",\n",
+    "    parameters=[\n",
+    "        {'name': 'x', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
+    "        {'name': 'y', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
+    "        {'name': 'z', 'type': 'double', 'bounds': {'min': 0, 'max': 1}},\n",
+    "    ],\n",
+    "    metadata={\n",
+    "        'owner': 'Alexandra'\n",
+    "    }\n",
+    ")\n",
+    "print \"View you experiment at https://sigopt.com/experiment/{}\".format(experiment.id)"
    ]
   },
   {
@@ -53,8 +75,16 @@
    },
    "outputs": [],
    "source": [
-    "# experiment_id = USER DEFINED\n",
-    "experiment = conn.experiments(experiment_id).fetch()"
+    "import math, random\n",
+    "def evaluate_metric(assignments):\n",
+    "    x = assignments['x']\n",
+    "    y = assignments['y']\n",
+    "    z = assignments['z']\n",
+    "    sum = 0\n",
+    "    for i in range(100 * x):\n",
+    "        for j in range(100 * y):\n",
+    "            sum += math.sin(z * random.random())\n",
+    "    return sum"
    ]
   },
   {
@@ -76,10 +106,10 @@
     "from time import time\n",
     "\n",
     "# train for 10x to 20x the number of dimensions\n",
-    "for _ in range(60):\n",
+    "for _ in range(30):\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    start_ts = time()\n",
-    "    value = evaluate_metric(suggestion.assignments) # You implement this\n",
+    "    value = evaluate_metric(suggestion.assignments)\n",
     "    end_ts = time()\n",
     "    # Report an observation with training_time metadata\n",
     "    observation = conn.experiments(experiment.id).observations().create(\n",
@@ -129,7 +159,10 @@
     "\n",
     "iplot({\n",
     "    'data': [Histogram(x=training_time_map.values())],\n",
-    "    'layout': {'title': 'Distribution of Training Times'}\n",
+    "    'layout': {\n",
+    "        'title': 'Distribution of Training Times',\n",
+    "        'xaxis': {'title': 'seconds'},\n",
+    "    },\n",
     "})"
    ]
   },
@@ -160,7 +193,7 @@
     "for o in observations:\n",
     "    training_time = training_time_map.get(o.id, None)\n",
     "    if training_time is not None:\n",
-    "        training_times.append(ett)\n",
+    "        training_times.append(training_time)\n",
     "        for (param, value) in o.assignments.to_json().iteritems():\n",
     "            parameter_values[param].append(value)"
    ]
@@ -177,8 +210,12 @@
     "# Ensure you have run the plotly setup earlier in the notebook\n",
     "for (param, values) in parameter_values.iteritems():\n",
     "    iplot({\n",
-    "            'data': [Scatter(x=values, y=estimated_training_times, mode=\"markers\")],\n",
-    "            'layout': {'title': u'Estimated Training Time vs {}'.format(param)}\n",
+    "            'data': [Scatter(x=values, y=training_times, mode=\"markers\")],\n",
+    "            'layout': {\n",
+    "                'title': u'Training Time vs {}'.format(param),\n",
+    "                'xaxis': {'title': 'seconds'},\n",
+    "            },\n",
+    "            \n",
     "    })"
    ]
   },
@@ -188,26 +225,6 @@
    "source": [
     "## Next Steps\n",
     "Did you notice anything interesting with your experiments? Do the graphs match up to your intuition about how parameter values affect training time? Email <contact@sigopt.com> or tweet to [@SigOpt](twitter.com/sigopt) to let us know what you find! Happy Optimizing!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Appendix: What we noticed\n",
-    "We ran this notebook on three experiments from our text classifier example, and produced the graphs below. It's interesting to note how by visual inspection, it appears that the two parameters with the most influence on time are `min_n_gram` and `n_gram_offset`. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Estimated training time versus log regularization coefficient](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-log-reg-coefficient.png?raw=true)\n",
-    "![Estimated training time versus l1 coefficient](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-l1-coefficient.png?raw=true)\n",
-    "![Estimated training time versus log minimum document frequency](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-log-min-df.png?raw=true)\n",
-    "![Estimated training time versus document frequency offset](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-df-offset.png?raw=true)\n",
-    "![Estimated training time versus min n-gram](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-min-n-gram.png?raw=true)\n",
-    "![Estimated training time versus n-gram offset](https://github.com/sigopt/sigopt-examples/blob/master/estimated-training-time/ett-vs-n-gram-offset.png?raw=true)"
    ]
   }
  ],
